--- a/style.css
+++ b/style.css
@@ -1,9 +1,48 @@
 html, body{
     padding: 0;
     margin: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
+    font-size: 18px;
 }
 canvas{
     display: block;
+    /* height: 80vh;
+    width: 100%; */
+}
+h1{
+    margin: 0;
+    padding-left: 1em;
+}
+p{
+    margin: 0;
+}
+nav{
+    display: flex;
+    height: 8vh;
+    border-bottom: 1px solid black;
+    align-items: center;
+    justify-content: space-between;
+}
+#navItems{
+    width: 40%;
+    margin: 0;
+    padding: 0;
+    background-color: lightblue;
+    list-style: none;
+    text-align: center;
+    display: none;
+    height: 100vh;
+    position: absolute;
+    top: 8vh;
+    right: 0;
+}
+#navButton{
+    text-decoration: none;
+    font-size: 1.5em;
+    padding-right: 1em;
+}
+.navItem{
+    font-size: 1.3em;
+    margin: 1em 0;
 }
