--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1{
     padding-left: 1em;
 }
 label{
-    margin: 0;
+    font-size: 1.3em;
 }
 nav{
     display: flex;
@@ -65,6 +65,9 @@ button{
     
 }
 .navItem{
-    font-size: 1.3em;
-    margin: 1em 0;
+    font-size: 1.4em;
+    height: 2em;
+}
+.active{
+    background: #6411E1;
 }
