Added new shape to HTML and added JS function for that shape. Created shape navigation on canvis via mouseinputs.

--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ button{
     outline: none;
     width: 100%;
 }
+input[type="range"]{
+    width: 80%;
+}
 #navItems{
     width: 40%;
     margin: 0;
