--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ h1{
     padding-left: 1em;
 }
 label{
-    font-size: 1.3em;
+    font-size: 1em;
+    display: inline-block;
+    margin-top: 1em;
 }
 nav{
     display: flex;
@@ -111,6 +113,9 @@ input[type="range"]{
     }
 }
 @media only screen and (min-width: 1040px){
+    label{
+        font-size: 1.3em;
+    }
     #navItems{
         display: block;
         width: 15%;
