--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ input[type="range"]{
     background: #5741E1;
 
 }
+.navItem:hover{
+    background: #6411E1;
+}
 #navButton{
     text-decoration: none;
     font-size: 1.5em;
